--- a/.github/workflows/auto-build.yml
+++ b/.github/workflows/auto-build.yml
@@ -92,9 +92,9 @@ jobs:
           pio run -e Unified_ESP32C3_900_RX_via_UART
           cp .pio/build/Unified_ESP32C3_900_RX_via_UART/firmware.bin \
              ../ELRS_${{ steps.elrs_release.outputs.tag }}_RX_ESP32C3_${{ env.MODULE_NAME }}_${{ env.BAND_NAME }}.bin
-          cp .pio/build/Unified_ESP32C3_900_RX_via_UART/bootloader.bin ../bootloader.bin
-          cp .pio/build/Unified_ESP32C3_900_RX_via_UART/partitions.bin ../partitions.bin
-          cp .pio/build/Unified_ESP32C3_900_RX_via_UART/boot_app0.bin ../boot_app0.bin
+          cp .pio/build/Unified_ESP32C3_900_RX_via_UART/bootloader.bin ../bootloader_rx.bin
+          cp .pio/build/Unified_ESP32C3_900_RX_via_UART/partitions.bin ../partitions_rx.bin
+          cp .pio/build/Unified_ESP32C3_900_RX_via_UART/boot_app0.bin ../boot_app0_rx.bin
 
       - name: Create hardware layout file
         if: steps.check_built.outputs.should_build == 'true'
@@ -143,20 +143,20 @@ jobs:
             Works with TX using E32-400M30S module (same band).
 
             ### Flashing RX (ESP32-C3)
-            \`\`\`bash
-            esptool.py --chip esp32c3 write_flash \\
-                0x0 bootloader.bin \\
-                0x8000 partitions.bin \\
-                0xe000 boot_app0.bin \\
+            ```bash
+            esptool.py --chip esp32c3 write_flash \
+                0x0 bootloader_rx.bin \
+                0x8000 partitions_rx.bin \
+                0xe000 boot_app0_rx.bin \
                 0x10000 ELRS_*_RX_ESP32C3_*.bin
-            \`\`\`
+            ```
 
             ---
             *Auto-built by GitHub Actions*
           files: |
-            bootloader.bin
-            partitions.bin
-            boot_app0.bin
+            bootloader_rx.bin
+            partitions_rx.bin
+            boot_app0_rx.bin
             ELRS_${{ steps.elrs_release.outputs.tag }}_RX_ESP32C3_${{ env.MODULE_NAME }}_${{ env.BAND_NAME }}.bin
             ESP32C3_SuperMini_RX.json
         env:
