Fix: create JSON in src/hardware/ BEFORE build

--- a/.github/workflows/auto-build.yml
+++ b/.github/workflows/auto-build.yml
@@ -76,30 +76,10 @@ jobs:
         if: steps.check_built.outputs.should_build == 'true'
         run: pip install platformio intelhex
 
-      - name: Configure build
-        if: steps.check_built.outputs.should_build == 'true'
-        working-directory: src
-        run: |
-          sed -i 's/^-DRegulatory_Domain_.*/#&/' user_defines.txt
-          echo "${{ env.REGULATORY_DOMAIN }}" >> user_defines.txt
-          echo "-DLOCK_ON_FIRST_CONNECTION" >> user_defines.txt
-          echo "-DAUTO_WIFI_ON_INTERVAL=60" >> user_defines.txt
-
-      - name: Build RX firmware (ESP32-C3)
-        if: steps.check_built.outputs.should_build == 'true'
-        working-directory: src
-        run: |
-          pio run -e Unified_ESP32C3_900_RX_via_UART
-          cp .pio/build/Unified_ESP32C3_900_RX_via_UART/firmware.bin \
-             ../ELRS_${{ steps.elrs_release.outputs.tag }}_RX_ESP32C3_${{ env.MODULE_NAME }}_${{ env.BAND_NAME }}.bin
-          cp .pio/build/Unified_ESP32C3_900_RX_via_UART/bootloader.bin ../bootloader_rx.bin
-          cp .pio/build/Unified_ESP32C3_900_RX_via_UART/partitions.bin ../partitions_rx.bin
-          cp .pio/build/Unified_ESP32C3_900_RX_via_UART/boot_app0.bin ../boot_app0_rx.bin
-
-      - name: Create hardware layout file
+      - name: Create hardware layout files
         if: steps.check_built.outputs.should_build == 'true'
         run: |
-          cat > ESP32C3_SuperMini_RX.json << 'EOF'
+          cat > src/hardware/ESP32C3_SuperMini_RX.json << 'EOF'
           {
               "platform": "esp32-c3",
               "product_name": "DIY ESP32-C3 SuperMini RX (RFM96)",
@@ -121,6 +101,27 @@ jobs:
               "led": 8
           }
           EOF
+          cp src/hardware/ESP32C3_SuperMini_RX.json .
+
+      - name: Configure build
+        if: steps.check_built.outputs.should_build == 'true'
+        working-directory: src
+        run: |
+          sed -i 's/^-DRegulatory_Domain_.*/#&/' user_defines.txt
+          echo "${{ env.REGULATORY_DOMAIN }}" >> user_defines.txt
+          echo "-DLOCK_ON_FIRST_CONNECTION" >> user_defines.txt
+          echo "-DAUTO_WIFI_ON_INTERVAL=60" >> user_defines.txt
+
+      - name: Build RX firmware (ESP32-C3)
+        if: steps.check_built.outputs.should_build == 'true'
+        working-directory: src
+        run: |
+          pio run -e Unified_ESP32C3_900_RX_via_UART
+          cp .pio/build/Unified_ESP32C3_900_RX_via_UART/firmware.bin \
+             ../ELRS_${{ steps.elrs_release.outputs.tag }}_RX_ESP32C3_${{ env.MODULE_NAME }}_${{ env.BAND_NAME }}.bin
+          cp .pio/build/Unified_ESP32C3_900_RX_via_UART/bootloader.bin ../bootloader_rx.bin
+          cp .pio/build/Unified_ESP32C3_900_RX_via_UART/partitions.bin ../partitions_rx.bin
+          cp .pio/build/Unified_ESP32C3_900_RX_via_UART/boot_app0.bin ../boot_app0_rx.bin
 
       - name: Create Release
         if: steps.check_built.outputs.should_build == 'true'
