--- a/.github/workflows/auto-build.yml
+++ b/.github/workflows/auto-build.yml
@@ -79,6 +79,7 @@ jobs:
       - name: Create hardware layout files
         if: steps.check_built.outputs.should_build == 'true'
         run: |
+          mkdir -p src/hardware
           cat > src/hardware/ESP32C3_SuperMini_RX.json << 'EOF'
           {
               "platform": "esp32-c3",
