--- a/.github/workflows/auto-build.yml
+++ b/.github/workflows/auto-build.yml
@@ -86,29 +86,29 @@ jobs:
       - name: Create hardware layout files
         if: steps.check_built.outputs.should_build == 'true'
         run: |
-          cat > src/hardware/ESP32C3_SuperMini_RX.json << 'EOF'
+          cat > src/hardware/ESP32_RFM96_RX.json << 'EOF'
           {
-              "platform": "esp32-c3",
-              "product_name": "DIY ESP32-C3 SuperMini RX (RFM96)",
-              "serial_rx": 20,
-              "serial_tx": 21,
-              "radio_dio0": 1,
-              "radio_dio1": 2,
-              "radio_miso": 5,
-              "radio_mosi": 4,
-              "radio_nss": 7,
-              "radio_rst": 3,
-              "radio_sck": 6,
+              "platform": "esp32",
+              "product_name": "DIY ESP32 RX (RFM96)",
+              "serial_rx": 13,
+              "serial_tx": 13,
+              "radio_dio0": 26,
+              "radio_dio1": 25,
+              "radio_miso": 19,
+              "radio_mosi": 23,
+              "radio_nss": 5,
+              "radio_rst": 14,
+              "radio_sck": 18,
               "power_min": 0,
               "power_high": 2,
               "power_max": 2,
               "power_default": 2,
               "power_control": 0,
               "power_values": [120, 124, 127],
-              "led": 8
+              "led": 22
           }
           EOF
-          cp src/hardware/ESP32C3_SuperMini_RX.json .
+          cp src/hardware/ESP32_RFM96_RX.json .
 
       - name: Register custom hardware in targets.json
         if: steps.check_built.outputs.should_build == 'true'
@@ -123,13 +123,13 @@ jobs:
           if 'rx' not in targets['diy']:
               targets['diy']['rx'] = {}
 
-          targets['diy']['rx']['esp32c3_supermini_rfm96'] = {
-              "product_name": "DIY ESP32-C3 SuperMini RX (RFM96)",
-              "lua_name": "C3 RFM96 RX",
-              "layout_file": "ESP32C3_SuperMini_RX.json",
+          targets['diy']['rx']['esp32_rfm96'] = {
+              "product_name": "DIY ESP32 RX (RFM96)",
+              "lua_name": "ESP32 RFM96 RX",
+              "layout_file": "ESP32_RFM96_RX.json",
               "upload_methods": ["uart", "wifi"],
-              "platform": "esp32-c3",
-              "firmware": "Unified_ESP32C3_900_RX"
+              "platform": "esp32",
+              "firmware": "Unified_ESP32_900_RX"
           }
 
           with open('src/hardware/targets.json', 'w') as f:
@@ -145,16 +145,16 @@ jobs:
           echo "-DLOCK_ON_FIRST_CONNECTION" >> user_defines.txt
           echo "-DAUTO_WIFI_ON_INTERVAL=60" >> user_defines.txt
 
-      - name: Build RX firmware (ESP32-C3)
+      - name: Build RX firmware (ESP32)
         if: steps.check_built.outputs.should_build == 'true'
         working-directory: src
         run: |
-          pio run -e Unified_ESP32C3_900_RX_via_UART
-          cp .pio/build/Unified_ESP32C3_900_RX_via_UART/firmware.bin \
-             ../ELRS_${{ steps.elrs_release.outputs.tag }}_RX_ESP32C3_${{ env.MODULE_NAME }}_${{ env.BAND_NAME }}.bin
-          cp .pio/build/Unified_ESP32C3_900_RX_via_UART/bootloader.bin ../bootloader_rx.bin
-          cp .pio/build/Unified_ESP32C3_900_RX_via_UART/partitions.bin ../partitions_rx.bin
-          cp .pio/build/Unified_ESP32C3_900_RX_via_UART/boot_app0.bin ../boot_app0_rx.bin
+          pio run -e Unified_ESP32_900_RX_via_UART
+          cp .pio/build/Unified_ESP32_900_RX_via_UART/firmware.bin \
+             ../ELRS_${{ steps.elrs_release.outputs.tag }}_RX_ESP32_${{ env.MODULE_NAME }}_${{ env.BAND_NAME }}.bin
+          cp .pio/build/Unified_ESP32_900_RX_via_UART/bootloader.bin ../bootloader_rx.bin
+          cp .pio/build/Unified_ESP32_900_RX_via_UART/partitions.bin ../partitions_rx.bin
+          cp .pio/build/Unified_ESP32_900_RX_via_UART/boot_app0.bin ../boot_app0_rx.bin
 
       - name: Create Release
         if: steps.check_built.outputs.should_build == 'true'
@@ -168,7 +168,7 @@ jobs:
             RX firmware for ${{ env.MODULE_NAME }} module (SX1276, +20dBm/100mW).
 
             ### Hardware
-            - **RX:** ESP32-C3 SuperMini + ${{ env.MODULE_NAME }}
+            - **RX:** ESP32 (WROOM/DevKit) + ${{ env.MODULE_NAME }}
 
             ### Frequency
             - Band: ${{ env.BAND_NAME }} (423.5-438MHz, 20 channels)
@@ -176,13 +176,13 @@ jobs:
             ### Compatibility
             Works with TX using E32-400M30S module (same band).
 
-            ### Flashing RX (ESP32-C3)
+            ### Flashing RX (ESP32)
             ```bash
-            esptool.py --chip esp32c3 write_flash \
-                0x0 bootloader_rx.bin \
+            esptool.py --chip esp32 write_flash \
+                0x1000 bootloader_rx.bin \
                 0x8000 partitions_rx.bin \
                 0xe000 boot_app0_rx.bin \
-                0x10000 ELRS_*_RX_ESP32C3_*.bin
+                0x10000 ELRS_*_RX_ESP32_*.bin
             ```
 
             ---
@@ -191,7 +191,7 @@ jobs:
             bootloader_rx.bin
             partitions_rx.bin
             boot_app0_rx.bin
-            ELRS_${{ steps.elrs_release.outputs.tag }}_RX_ESP32C3_${{ env.MODULE_NAME }}_${{ env.BAND_NAME }}.bin
-            ESP32C3_SuperMini_RX.json
+            ELRS_${{ steps.elrs_release.outputs.tag }}_RX_ESP32_${{ env.MODULE_NAME }}_${{ env.BAND_NAME }}.bin
+            ESP32_RFM96_RX.json
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
